# Sapphire

./: .appveyor.yaml  .appveyor.yml  .clang-format  .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CONTRIBUTING.md  CodeStyle.xml  FindMySQLConnectorCPP.cmake  README.md  boost.cmake  compiler.cmake  sql_import.sh
scripts/native/: CMakeLists.txt  ScriptLoader.cpp.in  ScriptObject.h
scripts/native/CmnDef/: CmnDefCutSceneReplay.cpp  CmnDefInnBed.cpp  CmnDefLinkShell.cpp  HouFurOrchestrion.cpp
scripts/native/action/: ActionSprint3.cpp
scripts/native/aetheryte/: Aethernet.cpp  Aetheryte.cpp
scripts/native/debugcommands/: Add.cpp  Get.cpp  Help.cpp  InjectChatPacket.cpp  InjectPacket.cpp  Nudge.cpp  PreInclude.h  Replay.cpp  Script.cpp  ServerInfo.cpp  Set.cpp
scripts/native/opening/: OpeningGridania.cpp  OpeningLimsa.cpp  OpeningUldah.cpp
scripts/native/quest/: ManFst001.cpp  ManFst002.cpp  ManFst003.cpp  ManFst004.cpp  ManSea001.cpp  ManSea002.cpp  ManWil001.cpp  ManWil002.cpp
scripts/native/skill/: AbilityScript3.cpp  Action3.cpp  ActionSprint.cpp
scripts/native/statuseffect/: Status50.cpp  StatusEffect50.cpp  StatusSprint.cpp
src/api/: CMakeLists.txt  Forwards.h  LoginSession.cpp  LoginSession.h  PlayerMinimal.cpp  PlayerMinimal.h  SapphireAPI.cpp  SapphireAPI.h  SapphireApi.cpp  SapphireApi.h  Session.cpp  Session.h  client_http.h  main.cpp  server_http.hpp
src/common/: CMakeLists.txt  Common.h  CommonGen.cpp  CommonGen.h  Forwards.h  Framework.cpp  Framework.h  Service.cpp  Service.h  ServiceRegistry.cpp  ServiceRegistry.h  Vector3.cpp  Vector3.h  Version.cpp  Version.cpp.in  Version.h
src/common/Config/: ConfigDef.h  ConfigMgr.cpp  ConfigMgr.h
src/common/Crypt/: base64.cpp  base64.h  blowfish.cpp  blowfish.h  blowfish.h2  md5.cpp  md5.h
src/common/Database/: CharaDbConnection.cpp  CharaDbConnection.h  DatabaseDef.h  DbCommon.h  DbConnection.cpp  DbConnection.h  DbLoader.cpp  DbLoader.h  DbWorker.cpp  DbWorker.h  DbWorkerPool.cpp  DbWorkerPool.h  Operation.h  PreparedStatement.cpp  PreparedStatement.h  StatementTask.cpp  StatementTask.h  ZoneDbConnection.cpp  ZoneDbConnection.h
src/common/Event/: Event.h  EventDispatcher.cpp  EventDispatcher.h  Observer.h
src/common/Exd/: ExdData.cpp  ExdData.h  ExdDataGenerated.cpp  ExdDataGenerated.h
src/common/Logging/: Logger.cpp  Logger.h
src/common/Navi/: NavMeshCacheIO.cpp  NavMeshCacheIO.h  NaviMgr.cpp  NaviMgr.h  NaviProvider.cpp  NaviProvider.h  PathFinder.cpp  PathFinder.h
src/common/Network/: Acceptor.cpp  Acceptor.h  CommonActorControl.h  CommonNetwork.h  Connection.cpp  Connection.h  GamePacket.cpp  GamePacket.h  GamePacketNew.h  GamePacketParser.cpp  GamePacketParser.h  Hive.cpp  Hive.h  Oodle.cpp  Oodle.h  PacketContainer.cpp  PacketContainer.h
src/common/Random/: RNGMgr.h
src/common/Util/: CrashHandler.cpp  CrashHandler.h  LockedQueue.h  LockedWaitQueue.h  Paths.cpp  Paths.h  SpawnIndexAllocator.h  Util.cpp  Util.h  UtilMath.cpp  UtilMath.h
src/dbm/: CMakeLists.txt  DbManager.cpp  DbManager.h  main.cpp
src/lobby/: CMakeLists.txt  Forwards.h  GameConnection.cpp  GameConnection.h  LobbyPacketContainer.cpp  LobbyPacketContainer.h  LobbySession.cpp  LobbySession.h  RestConnector.cpp  RestConnector.h  ServerLobby.cpp  ServerLobby.h  client_http.hpp  mainLobbyServer.cpp
src/sapphire_zone/: CMakeLists.txt  ZoneServer.cpp  ZoneServer.h  main.cpp
src/scripts/: CMakeLists.txt  ScriptLoader.cpp.in  ScriptObject.h
src/scripts/action/: ActionReturn6.cpp  ActionSprint3.cpp  ScriptLoader.cpp
src/scripts/arena/: IfritNormal.cpp
src/scripts/common/: CmnDefCutSceneReplay.cpp  CmnDefInnBed.cpp  CmnDefLinkShell.cpp  CmnDefMarketBoardGridania.cpp  CmnDefMogLetter.cpp  CmnDefNpcRepair.cpp  CmnDefWeatherForeCast.cpp  CmnExitRange.cpp  CmnGscGilToCoin.cpp  CmnRegWilMaterialize.cpp  ComDefFreeCompany.cpp  ComDefGrandCompanyOfficer.cpp  ComDefMobHuntBoard.cpp  FcTalk.cpp  GilShop.cpp  HouFurOrchestrion.cpp  ScriptLoader.cpp  SmallTalk.cpp
src/scripts/instances/: AnotherSildihnSubterrane.cpp  AnotherSildihnSubterraneSavage.cpp  ContainmentBayZ1T9Unreal.cpp  OceanFishing.cpp  ScriptLoader.cpp  TheSildihnSubterrane.cpp  TripleTriadInvitationalParlor.cpp  TripleTriadOpenTournament.cpp
src/scripts/opening/: OpeningGridania.cpp  OpeningLimsa.cpp  OpeningUldah.cpp  ScriptLoader.cpp
src/scripts/quest/: ManFst001.cpp  ManFst002.cpp  ManFst002_1.cpp  ManFst002_2.cpp  ManFst002_3.cpp  ManFst003.cpp  ManFst004.cpp  ManFst005.cpp  ManFst006.cpp  ManFst007.cpp  ManFst008.cpp  ManFst009.cpp  ManFst200.cpp  ManFst203.cpp  ManFst204.cpp  ManFst205.cpp  ManFst206.cpp  ManFst207.cpp  ManFst208.cpp  ManFst209.cpp  ManFst300.cpp  ManFst302.cpp  ManFst303.cpp  ManFst304.cpp  ManFst306.cpp  ManFst309.cpp  ManFst313.cpp  ManFst401.cpp  ManFst404.cpp  ManFst407.cpp  ManFst408.cpp  ManFst503.cpp  ManSea001.cpp  ManSea002.cpp  ManSea003.cpp  ManSea005.cpp  ManWil001.cpp  ManWil002.cpp  ManWil003.cpp  ManWil004.cpp  (+4 more)
src/scripts/statuseffect/: StatusEffectDefiance.cpp  StatusEffectUnchained.cpp
src/scripts/territory/: S1f2.cpp
src/server_console/: CMakeLists.txt  mainGameServer.cpp
src/server_gui/: Application.cpp  CMakeLists.txt  ServerGUI.cpp  ServerGUI.h  ServerState.cpp  ServerState.h  commonshader.cpp  commonshader.h  main.cpp
src/server_gui/Engine/: CommonTypes.h  GfxApi.h  Logger.cpp  Resource.h  ShaderResource.cpp  State.h
src/servers/: CMakeLists.txt
src/servers/Scripts/: CMakeLists.txt  ScriptLoader.cpp.in  ScriptObject.h
src/servers/Server_Common/: Acceptor.cpp  Acceptor.h  CMakeLists.txt  ChaiscriptStdLib.cpp  Common.h  CommonGen.cpp  CommonGen.h  CommonNetwork.h  Connection.h  Database.cpp  ExdData.cpp  ExdData.h  Forwards.h  GamePacket.cpp  GamePacket.h  GamePacketNew.h  Hive.cpp  PacketContainer.cpp  PacketContainer.h  ServerPacketDef.h  Util.cpp  Util.h  UtilMath.h  (+7 more)
src/tools/: CMakeLists.txt
src/world/: CMakeLists.txt  ForwardsZone.h  ServerMgr.cpp  ServerMgr.h  Session.cpp  Session.h  WorldServer.cpp  WorldServer.h  mainGameServer.cpp
(+3986 files in other folders)
